[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scexao_etc"
description = "SCExAO Exposure Time Calculator"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Miles Lucas", email = "mdlucas@hawaii.edu"}]
requires-python = ">=3.7"
dynamic = ["version"]
dependencies = [
    "astropy",
    "click",
    "hcipy",
    "pandas",
    "numpy",
    "synphot",
    "photutils",
    "sep",
    "dash",
    "streamlit",
    "pydantic"
]

[project.urls]
repository = "https://github.com/scexao-org/scexao_etc"

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit"
]

[project.scripts]
scexao_etc = "scexao_etc.app:main"

[tool.setuptools.dynamic]
version = {attr = "scexao_etc.__version__"}


[tool.ruff.lint]
# pycodestyle, pydocstyle, isort, pyupgrade, pylint, tidyimports, use-pathlib, numpy, errmsg
select = ["E", "F", "B", "SIM", "I", "UP", "TID", "PTH", "NPY", "EM"]
ignore = [
    "E501", # line too long
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "numpy"
